--- a/ru.dip.editors/src/ru/dip/editors/ru_messages.properties
+++ b/ru.dip.editors/src/ru/dip/editors/ru_messages.properties
@@ -35,6 +35,8 @@ DipView_ID=ru.dip.editors.umlview
 DipView_ViewSizeActionName=\u041F\u043E \u0440\u0430\u0437\u043C\u0435\u0440\u0430\u043C \u0432\u0438\u0434\u0430
 DipView_ZoomMinusActionName=\u0423\u043C\u0435\u043D\u044C\u0448\u0438\u0442\u044C
 DipView_ZoomPlusActionName=\u0423\u0432\u0435\u043B\u0438\u0447\u0438\u0442\u044C
+DotEditor_ID=ru.dip.editors.doteditor
+DotEditorContributor_OpenDipViewActionName=\u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0432\u0438\u0434 "DIP \u0412\u0438\u0437\u0443\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F"
 EditViewPart_ID=ru.dip.editors.editview
 EditViewPart_Name=DIP \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440
 EditViewPart_QuestionSave=\ \u043D\u0435 \u0431\u044B\u043B \u0441\u043E\u0445\u0440\u0430\u043D\u0451\u043D. \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C?
