--- a/ru.dip.editors/.classpath
+++ b/ru.dip.editors/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/ru.dip.ktable/libs/KTable.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
