--- a/ru.dip.editors/src/ru/dip/editors/ru_messages.properties
+++ b/ru.dip.editors/src/ru/dip/editors/ru_messages.properties
@@ -77,6 +77,7 @@ NumberListAction_ID=ru.dip.editors.md.list
 NumberListAction_Name=\u041D\u0443\u043C\u0435\u0440\u043E\u0432\u0430\u043D\u043D\u044B\u0439 \u0441\u043F\u0438\u0441\u043E\u043A
 ParagraphAction_ID=ru.dip.editors.md.paragraph
 ParagraphAction_Name=\u041F\u0430\u0440\u0430\u0433\u0440\u0430\u0444
+ReportEditor_ContentPageTitle=C\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435
 ReportEditor_ReportPageTitle=\u041E\u0442\u0447\u0451\u0442
 ReportEditor_RulesPageTitle=\u041F\u0440\u0430\u0432\u0438\u043B\u0430
 ReportPage_1=\ [?]
